HtmlUI: fixe alignement of key-boxes

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/desktop/ViewButton.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/desktop/ViewButton.css
@@ -142,6 +142,6 @@
   }
 
   & > .key-box {
-    bottom: 4px;
+    top: 14px;
   }
 }
