--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/desktop/outline/Outline.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/desktop/outline/Outline.css
@@ -37,7 +37,7 @@
     border-bottom: 1px solid @outline-title-border-color;
 
     & > .key-box {
-      top: 10px;
+      top: 19px;
     }
 
     & > .outline-title-text {
