--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/tree/Tree.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/tree/Tree.css
@@ -171,7 +171,7 @@
 /* key handling */
 
 .tree-node .key-box {
-  top: calc(~'50%' - 9px);
+  top: calc(~'50%' - 11px);
 }
 
 .tree > .tree-data > .key-box {
